--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body{
+   color: aliceblue;
+    background-color: black;
+    font-family: "Kanit", sans-serif;
+    margin: 0px;
+    margin-bottom: 100px;
+}
+
+
 .chamada{
     background: purple;
     margin-top: 80px;
