--- a/style.css
+++ b/style.css
@@ -20,3 +20,21 @@ header{
    border-bottom: solid 3px white;
    padding: 20px;
 }
+.categoria{
+    margin-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.categoria-videos{
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+.categoria-videos img{
+    opacity: 0.5;
+    height: 200px;
+}
+.categoria-videos img:hover{
+    opacity: 1.0;
+    border: 3px solid rgb(0, 255, 0);
+}
